Fixing the itinerary visibility

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,4 +3,11 @@
  */
 
 @import 'scss/icons';
+
+
+.lsx-itinerary-wrapper {
+	.hidden {
+		display: none;
+	}
+}
  
